--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,6 +25,13 @@ jobs:
     - name: Test
       run: go test -v ./...
 
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        # Artifact name
+        name: lambda-secrets
+        # A file, directory or wildcard pattern that describes what to upload
+        path: lambda-secrets
 
     - uses: google-github-actions/release-please-action@v3
       with:
