--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - "main"
+    paths:
+      - 'src/**'
+      - 'Dockerfile'
 
 env:
   AWS_REGION: eu-central-1                 # set this to your preferred AWS region, e.g. us-west-1
