--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,8 +3,13 @@ name: Go
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'src/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'src/**'
+
   workflow_dispatch:
 
 jobs:
