ecr workflow typos

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,4 +1,4 @@
-name: Deploy to Amazon ECS
+name: Upload to Amazon ECR
 
 on:
   push:
@@ -7,6 +7,8 @@ on:
     paths:
       - 'src/**'
       - 'Dockerfile'
+
+  workflow_dispatch:
 
 env:
   AWS_REGION: eu-central-1                 # set this to your preferred AWS region, e.g. us-west-1
