--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,10 @@ name: Go
 
 on:
   push:
+    tags: "releases/[1-9]+.[0-9]+.[0-9]+"
     branches: [ "main" ]
-    paths:
-      - 'src/**'
+    # paths:
+    #   - 'src/**'
   pull_request:
     branches: [ "main" ]
     paths:
@@ -39,7 +40,14 @@ jobs:
         # A file, directory or wildcard pattern that describes what to upload
         path: src/lambda-secrets
 
-    - uses: google-github-actions/release-please-action@v3
+    - name: Create Release
+      uses: actions/create-release@v1
+      if: startsWith(github.ref, 'refs/tags/releases/') && github.event_name == 'push'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        release-type: go
-        package-name: release-please-action
+        tag_name: ${{ github.ref }}
+        release_name: "Lambda Secrets Release Build"
+        body: "Lamda Secrets Release Build from ${{ github.ref }}/${{ github.sha }}"
+        draft: true
+        prerelease: true
