--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,25 +41,18 @@ jobs:
         path: src/lambda-secrets
 
     - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      if: startsWith(github.ref, 'refs/tags/releases/') && github.event_name == 'push'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: google-github-actions/release-please-action@v3
+      if: startsWith(github.ref, 'refs/tags/releases') && github.event_name == 'push'
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Lambda Secrets Release Build ${{ github.ref }}
-        body: "Lamda Secrets Release Build from ${{ github.ref }}/${{ github.sha }}"
-        draft: true
-        prerelease: true
-    - name: Upload Release Asset
-      id: upload-release-assets
-      uses: actions/upload-release-asset@v1
-      if: startsWith(github.ref, 'refs/tags/releases/') && github.event_name == 'push'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} 
-        asset_path: src/lambda-secrets
-        asset_name: lambda-secrets
-        asset_content_type: binary
+        command: github-release
+        release-type: go
+        extra-files: |
+          src/lambda-secrets
+      # with:
+      #   tag_name: ${{ github.ref }}
+      #   release_name: Lambda Secrets Release Build ${{ github.ref }}
+      #   body: "Lamda Secrets Release Build from ${{ github.ref }}/${{ github.sha }}"
+      #   draft: true
+      #   prerelease: true
+      #   files: |
+        
