--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,10 +42,11 @@ jobs:
 
     - name: Create Release
       uses: google-github-actions/release-please-action@v3
-      if: startsWith(github.ref, 'refs/tags/releases') && github.event_name == 'push'
+      # if: startsWith(github.ref, 'refs/tags/releases') && github.event_name == 'push'
       with:
         command: github-release
         release-type: go
+        path: src
         extra-files: |
           src/lambda-secrets
       # with:
