fix lambda workflow

--- a/.github/workflows/publish-secret-layer.yml
+++ b/.github/workflows/publish-secret-layer.yml
@@ -52,7 +52,7 @@ jobs:
           release_id: ${{ format('lambda-secrets-layer-{0}.zip', github.head_ref )}}
         run: |
           mkdir build 
-          zip -r ./build/$release_id ./secrets-layer
+          zip -r ./build/$release_id ./src/$LAMBDA_SECRETS_LAYER
 
       - name: Update Lambda Function Code
         env:
