--- a/.github/workflows/plan-on-push.yml
+++ b/.github/workflows/plan-on-push.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: '[Terragrunt] Plan'
+    - name: '[Terraform] Plan'
       working-directory: ${{ env.TERRAFORM_DIR }}
       run: |
         terraform init
