workflow: zip and publish extension layer

--- a/.github/workflows/publish-secret-layer.yml
+++ b/.github/workflows/publish-secret-layer.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   AWS_REGION: eu-central-1
-  LAMBDA_SECRETS_LAYER: 'lambda-secrets'
+  LAMBDA_SECRETS_LAYER: 'aws-lambda-secrets'
 
 permissions:
   contents: read
@@ -40,23 +40,27 @@ jobs:
           go-version: 1.18
 
       - name: Build Go Script
-        working-directory: src/
+        # working-directory: src/
         run: |
           go version
-          go get .
           go mod verify
-          go build -o $LAMBDA_SECRETS_LAYER
+          go mod tidy
+          go build -o ./fetch-secrets ./cmd/fetch-secrets/main.go
+          go build -o ./load-secrets ./cmd/load-secrets/main.go
 
       - name: Zip Function Artifacts
         env:
           release_id: ${{ format('lambda-secrets-layer-{0}.zip', github.head_ref )}}
         run: |
-          mkdir build 
-          zip -r ./build/$release_id ./src/$LAMBDA_SECRETS_LAYER
+          mkdir ./extensions
+          cp ./fetch-secrets ./extensions
+          mkdir ./extensions/wrapper
+          cp ./load-secrets ./extensions/wrapper
+          zip -r ./lambda-secrets-$release_id.zip ./extensions
 
       - name: Update Lambda Function Code
         env:
           release_id: ${{ format('lambda-secrets-layer-{0}.zip', github.head_ref )}}
         run: |
-          aws lambda publish-layer-version --layer-name "${LAMBDA_SECRETS_LAYER}" --zip-file fileb://build/$release_id
-          rm -r ./build
+          aws lambda publish-layer-version --layer-name "${LAMBDA_SECRETS_LAYER}" --zip-file fileb://lambda-secrets-$release_id.zip  --compatible-runtimes python3.9 python3.8 ruby2.5 --compatible-architectures x86_64
+          rm -r ./extensions
