workflow: multi-arch publish layer

--- a/.github/workflows/publish-secret-layer.yml
+++ b/.github/workflows/publish-secret-layer.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   AWS_REGION: eu-central-1
-  LAMBDA_SECRETS_LAYER: 'aws-lambda-secrets'
+  LAMBDA_SECRETS_LAYER: 'aws-lambda-secrets-layer'
 
 permissions:
   contents: read
@@ -39,28 +39,15 @@ jobs:
         with:
           go-version: 1.18
 
-      - name: Build Go Script
+      - name: Cross Complile Go Scripts and Generate ZIP archives
         # working-directory: src/
         run: |
-          go version
-          go mod verify
-          go mod tidy
-          go build -o ./fetch-secrets ./cmd/fetch-secrets/main.go
-          go build -o ./load-secrets ./cmd/load-secrets/main.go
-
-      - name: Zip Function Artifacts
-        env:
-          release_id: ${{ format('lambda-secrets-layer-{0}.zip', github.head_ref )}}
-        run: |
-          mkdir ./extensions
-          cp ./fetch-secrets ./extensions
-          mkdir ./extensions/wrapper
-          cp ./load-secrets ./extensions/wrapper
-          zip -r ./lambda-secrets-$release_id.zip ./extensions
+          make release
 
       - name: Update Lambda Function Code
-        env:
-          release_id: ${{ format('lambda-secrets-layer-{0}.zip', github.head_ref )}}
+        # env:
+        #   release_id: ${{ format('aws-lambda-secrets-{0}.zip', github.head_ref )}}
         run: |
-          aws lambda publish-layer-version --layer-name "${LAMBDA_SECRETS_LAYER}" --zip-file fileb://lambda-secrets-$release_id.zip  --compatible-runtimes python3.9 python3.8 ruby2.5 --compatible-architectures x86_64
-          rm -r ./extensions
+          aws lambda publish-layer-version --layer-name "${LAMBDA_SECRETS_LAYER}-x86_64" --zip-file fileb://aws-lambda-secrets-amd64.zip  --compatible-runtimes python3.9 python3.8 ruby2.5 --compatible-architectures x86_64
+          aws lambda publish-layer-version --layer-name "${LAMBDA_SECRETS_LAYER}-arm64" --zip-file fileb://aws-lambda-secrets-arm64.zip  --compatible-runtimes python3.9 python3.8 ruby2.5 --compatible-architectures arm64
+          rm aws-lambda-secrets-amd64.zip aws-lambda-secrets-arm64.zip
