workflow: publish secret layer fix extensions directory typo

--- a/.github/workflows/publish-secret-layer.yml
+++ b/.github/workflows/publish-secret-layer.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           make release
 
-      - name: Update Lambda Function Code
+      - name: Update Lambda Layer Version
         # env:
         #   release_id: ${{ format('aws-lambda-secrets-{0}.zip', github.head_ref )}}
         run: |
