[Workflow] Publish secrets layer rename

--- a/.github/workflows/publish-layer-version.yml
+++ b/.github/workflows/publish-layer-version.yml
@@ -16,7 +16,7 @@ permissions:
   contents: read
 
 jobs:
-  deploy-secrets-layer:
+  publish-secrets-layer:
     name: Publish Secrets Layer Version
     runs-on: ubuntu-latest
     environment: production
