--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -13,9 +13,6 @@ on:
       - 'Dockerfile'
   workflow_dispatch:
 
-env:
-  AWS_REGION: eu-central-1 # set this to your preferred AWS region, e.g. us-west-1
-
 permissions:
   contents: read
 
@@ -41,20 +38,6 @@ jobs:
       id: buildx
       uses: docker/setup-buildx-action@master
 
-    - name: Configure AWS credentials
-      id: aws-credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        role-to-assume: ${{ secrets.ASSUME_ROLE }}
-        role-duration-seconds: 900
-        aws-region: ${{ env.AWS_REGION }}
-
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
     - name: Login to GitHub Container Registry
       id: login-ghcr
       uses: docker/login-action@v2
@@ -67,12 +50,10 @@ jobs:
       id: meta
       uses: docker/metadata-action@v4
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: aws-lambda-secrets-extension
+        GHCR_REPOSITORY: aws-lambda-secrets-extension
       with:
         images: |
-          ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}
-          ghcr.io/${{ github.repository }}
+          ghcr.io/${{ env.GHCR_REPOSITORY }}
 
     - name: Set Release Tag
       id: tag
@@ -85,8 +66,7 @@ jobs:
       id: build-and-push
       uses: docker/build-push-action@v2
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: aws-lambda-secrets-extension
+        GHCR_REPOSITORY: aws-lambda-secrets-extension
       with:
         builder: ${{ steps.buildx.outputs.name }}
         context: .
@@ -94,8 +74,6 @@ jobs:
         platforms: linux/amd64, linux/arm64
         push: true
         tags: |
-          ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
-          ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.TAG }}
-          ghcr.io/${{ github.repository_owner }}/${{ env.ECR_REPOSITORY }}:latest
-          ghcr.io/${{ github.repository_owner }}/${{ env.ECR_REPOSITORY }}:${{ env.TAG }}
+          ghcr.io/${{ github.repository_owner }}/${{ env.GHCR_REPOSITORY }}:latest
+          ghcr.io/${{ github.repository_owner }}/${{ env.GHCR_REPOSITORY }}:${{ env.TAG }}
         labels: ${{ steps.meta.outputs.labels }}
