workflow: docker build ignore ec2 path

--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -11,6 +11,8 @@ on:
       - 'internal/**'
       - 'pkg/**'
       - 'Dockerfile'
+    paths-ignore:
+      - 'cmd/ec2_secrets/**'
   workflow_dispatch:
 
 permissions:
